    * 0203 FIX: Changed sidebar reload interval to be more random...
    * 0204 FIX: Reduced I/O on logins with access time recording or failed login counts...
    * 0206 FIX: Fixed logwatch permission check when using liveproxy...
    * 0210 FIX: LDAP: Fixed problem syncing contactgroups of a user with umlauts in CN

    WATO:
    * 0053 New rule for configuring the display_name of a service...
    * 0048 FIX: Fixed locking issue on host diagnose page
    * 0033 FIX: WATO forms: incorrect handling of checkbox state
    * 0205 FIX: Allowing star chars in variable names to fix role/permission editing...
    * 0207 FIX: Explicit communities were not written to config files in all cases
    * 0094 FIX: Hide SNMPv3 credentials in WATO...

    Notifications:
    * 0005 Added notification script for sending SMS via mobilant.com...
    * 0032 FIX: mail notification plugin: replace windows forbidden characters in mail images

    Reporting & Availability:
    * 0051 Option for showing timeline directly in availability table...
    * 0052 Visual colorization of availability according to levels...
    * 0054 New labelling options for availability table...
    * 0055 Allow grouping by host, host group or service group...
    * 0056 New concept of service periods in availability reporting...
    * 0002 You can now annotate events in the availability reporting...

    Event Console:
    * 0026 FIX: snmpd_mkevent.py: fixed crash on startup

    Livestatus:
    * 0067 livedump: new option to mark the mode at the beginning of the dump and documentation fixes...
    * 0023 FIX: table statehist: code cleanup / minor performance improvements
    * 0034 FIX: table statehist: no more missing entries if only one logfile exists


1.2.3i6:
    Core & Setup:
    * 0041 FIX: setup.py now handles non existing wwwuser gracefully...

    Checks & Agents:
    * 0040 Add agent plugin to test local hostname resolving...
    * 0020 FIX: Inventory problem with inventory_processes parameter...
