@@ -1,0 +1,8 @@
+Title: display http[s] links in plugin output
+Level: 1
+Component: multisite
+Version: 1.2.3i7
+Date: 1384432725
+Class: fix
+
+
