@@ -32,6 +32,7 @@
     * 0204 FIX: Reduced I/O on logins with access time recording or failed login counts...
     * 0206 FIX: Fixed logwatch permission check when using liveproxy...
     * 0210 FIX: LDAP: Fixed problem syncing contactgroups of a user with umlauts in CN
+    * 0035 FIX: display http[s] links in plugin output
 
     WATO:
     * 0053 New rule for configuring the display_name of a service...
